syntax = "proto3"; // Specifies the version of Protocol Buffers syntax

package com.shared.protos; // Java package for generated classes

// Option for Java: Generate separate files for each top-level message/enum
option java_multiple_files = true;
// Option for Java: Specifies the outer classname if java_multiple_files is false
// option java_outer_classname = "JobProtos";

option java_package = "com.shared.protos"; // THIS IS CRITICAL for Java

// Import for Timestamp (for date/time fields)
import "google/protobuf/timestamp.proto";

// Contains context about the user submitting the request.
// This is sent as a separate part of the multipart request for fast parsing and rate limiting.
message UserMetadata {
  string user_id = 1;
  string user_name = 2;
  string user_ip = 3; // Note: Be mindful of privacy regulations like GDPR when handling and storing user IP addresses.
}

// --- Enums ---

enum JobAction {
  JOB_STATUS_UNSPECIFIED = 0; // Default value, good practice
  JOB_NEW = 1;
  JOB_UPDATE = 2;
  JOB_DELETE = 3;
  JOB_AWAITING_ACTION = 4;
  JOB_COMPLETED = 5;
  JOB_FAILURE = 6;
}

// A more specific status for tasks, distinct from JobStatus
enum TaskAction {
  TASK_EXECUTION_STATUS_UNSPECIFIED = 0;
  TASK_CREATE = 1;
  TASK_UPDATE = 2;
  TASK_DELETE = 3;
  TASK_SEND = 4;
  TASK_RECEIVE = 5;
  TASK_AWAITING_INPUT = 6; // Or TASK_AWAITING_DEPENDENCY
  TASK_SUCCESS = 7;
  TASK_FAILURE = 8;
}

// --- Payload Messages (Specific Task Details) ---
// These messages now only contain the data specific to their function.
// Common metadata has been moved to the Task message.
message EmailPayload {
  string unique_mail_id = 1;
  string sender_id = 2;
  repeated string recipient_id = 3; // 'repeated' for lists/arrays
  string title_heading = 4;
  string message_body = 5;
  google.protobuf.Timestamp mail_time_stamp = 6;
}

message PriorityFlowPayload {
  string prio_f_id = 1; // Assuming string ID, could be int64
  int32 prio_f_rank = 2;
  string prio_f_name = 3;
}

message DataPopulationPayload {
  string source_system = 1;
  string target_entity = 2;
  string filter_criteria = 3;
  string data_payload = 4;
}

// --- Core Messages ---

// A Task represents a single, atomic unit of work within a Job.
message Task {
  string task_id = 1;
  TaskAction task_action = 2;
  string task_description = 3;
  string task_last_modified_by = 4;
  google.protobuf.Timestamp task_last_modified_time_stamp = 5;

  // 'oneof' ensures that each task can only have one type of payload.
  // This cleanly defines what the task is supposed to do.
  oneof payload {
    EmailPayload email_payload = 6;
    PriorityFlowPayload priority_flow_payload = 7;
    DataPopulationPayload data_population_payload = 8;
  }
}

message Job {
  string job_id = 1;
  string job_name = 2;
  JobAction job_action = 3;
  string job_description = 4;
  string created_by = 5;
  google.protobuf.Timestamp creation_time_stamp = 6;

  // A Job is now a container for a sequence of one or more tasks.
  // This allows a single job to orchestrate multiple, varied actions.
  repeated Task tasks = 7;
}